--- a/PerlinPatternsPrototype/index.html
+++ b/PerlinPatternsPrototype/index.html
@@ -10,9 +10,9 @@
     <script src="Build/PerlinPatternsPrototype.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/PerlinPatternsPrototype.data.gz",
-        frameworkUrl: "Build/PerlinPatternsPrototype.framework.js.gz",
-        codeUrl: "Build/PerlinPatternsPrototype.wasm.gz",
+        dataUrl: "Build/PerlinPatternsPrototype.data",
+        frameworkUrl: "Build/PerlinPatternsPrototype.framework.js",
+        codeUrl: "Build/PerlinPatternsPrototype.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "FlowField",
